# ROS_ASSIGNMENT

./: .gitignore  README.md  docker-compose.yml  ros2-react-sdc-dashboard.patch  start.bat  start.sh
.devcontainer/: start-ros.sh
docker/: Dockerfile
ros2_ws/data/: README.md
ros2_ws/src/: README.md  TOPICS.md
ros2_ws/src/button_listener_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/button_listener_pkg/button_listener_pkg/: button_listener.py
ros2_ws/src/gui_interface/: package.xml  setup.py
ros2_ws/src/gui_interface/gui_interface/: topics.py
ros2_ws/src/student_nodes_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/student_nodes_pkg/student_nodes_pkg/: example_publisher.py  simulated_vehicle_node.py  temperature_publisher.py  temperature_recorder.py
scripts/: run_ros.sh
web_gui/: index.html  package-lock.json  package.json  vite.config.js
web_gui/src/: App.css  App.jsx  main.jsx
web_gui/src/components/: ConnectionStatus.jsx  EventLog.jsx  RecorderControls.jsx  TelemetryCard.jsx  VehicleControls.jsx
web_gui/src/hooks/: useRosBridge.js
web_gui/src/services/: rosTopics.js
