<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>button_listener_pkg</name>
  <version>0.0.1</version>
  <description>
    Provided EXAMPLE package for the React + rosbridge starter.
    Contains one node (button_listener) that subscribes to the button-press
    topic and logs every message. Read this as a worked example before adding
    your own nodes in student_nodes_pkg.
  </description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <!-- ament_python is the build type for pure-Python ROS 2 packages. -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies. -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- We import topic names from the shared gui_interface package. -->
  <exec_depend>gui_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
