<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui_interface</name>
  <version>0.0.1</version>
  <description>
    Shared "contract" package for the React + rosbridge starter.

    It defines the topic names that every node (and the React GUI) must agree
    on. Instead of typing the string '/button_press' in many places, each node
    imports it from gui_interface.topics. Change a topic name in ONE file and
    every Python node updates automatically.

    NOTE: This package contains NO nodes. It is a plain Python library that
    other ROS 2 packages depend on.
  </description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <!-- ament_python is the build type for pure-Python ROS 2 packages. -->
  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
